# safescript

./: .gitignore  Cargo.toml  LICENSE  README.md  SafeScript.code-workspace  deno.jsonc  tsconfig.json
example/: inline_add.safe.ts  main.safe.ts  main.ss  vec2.safe.ts
examples/intercall/: Cargo.toml  lib.ss  main.rs
libs/cli/: Cargo.toml  build.ts  main.rs  run.ts
libs/cli/util/: cache.ts  hash.ts
libs/core/: Cargo.toml  lib.d.ts  lib.internal.d.ts  lib.rs  lib.safescript.d.ts  lib.safescript.internal.d.ts  runtime.rs
libs/core/types/: core.safe.ts  numbers.safe.ts
libs/core/types/convert/: convert.safe.ts
libs/core/types/eh/: eh.safe.ts  option.safe.test.ts  option.safe.ts  result.safe.ts
libs/core/types/ops/: arithmetic.safe.ts  match.safe.ts  match_patterns.safe.ts  ops.safe.ts
libs/core/types/ops/annotations/: annotations.safe.ts
