[package]
name = "safescript-cli"
description = "SafeScript CLI"
version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
# Run this binary by default when using `cargo run`
default-run = "sensei"

[[bin]]
name = "sensei"
path = "main.rs"

[dependencies.safescript]
path = "../core"
