[package]
name = "safescript"
description = "A cure for the web"
version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "lib.rs"

[dependencies.parser]
package = "safescript-parser"
path = "../../../ss_core/parser"

[features]
default = ["interpreter"]

interpreter = []
compiler = []
transformer = []
