[package]
name = "safescript"
description = "A cure for the web"
version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "lib.rs"

[dependencies.common]
package = "safescript-common"
path = "../../../ss_core/common"
optional = true

[dependencies.transformer]
package = "safescript-transformer"
path = "../../../ss_core/transformer"
optional = true

[dependencies.compiler]
package = "safescript-compiler"
path = "../../../ss_core/compiler"
optional = true

[dependencies.vm]
package = "safescript-vm"
path = "../../../ss_core/vm"
optional = true

[features]
default = ["common"]

common = ["dep:common"]
transformer = ["dep:transformer"]
compiler = ["dep:compiler"]
vm = ["dep:vm"]
